--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -5977,6 +5977,30 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ea761c16",
+   "metadata": {},
+   "source": [
+    "### Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64953e7c",
+   "metadata": {},
+   "source": [
+    "#### Approximate/ Sample Entropy (ApEn/ SampEn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5c9ce5e",
+   "metadata": {},
+   "source": [
+    "In short, the SampEn can tell where the complexity of the signal comes from, by splitting the signal into different windows based on the given kernel length. This can be combined as the later step of Decomposition algorithms (like VMD) to show which exact frequency band contains the complexity/ noise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dcdf9e4a",
    "metadata": {},
    "source": [
