--- a/notebooks/track1_forecasting_benchmark.ipynb
+++ b/notebooks/track1_forecasting_benchmark.ipynb
@@ -216,19 +216,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "548604d9",
+   "id": "8ba3e7db",
    "metadata": {},
    "source": [
-    "The Integration of Lasso and HHT in TS Forecasting\n",
-    "\n",
-    "After HHT, we get\n",
-    "* A set of Hilbert transformed signals from IMFs\n",
-    "* Instantaneous frequency\n",
-    "* Instantaneous amplitude\n",
-    "\n",
-    "which introduces sparsity, which means not all components carry useful predictive information but rather just noise-dominated and redundant\n",
-    "\n",
-    "Lasso (L1 penalty) enforces sparsity by shrinking many coefficients exactly to 0 => perfect for HHT, as don't want all IMFs, just relevant ones. so Lasso will filters out noise features "
+    "### AutoRegressive Integrated Moving Average (ARIMA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1470b878",
+   "metadata": {},
+   "source": [
+    "#### Pre-requisites: The Moving Average (MA)"
    ]
   },
   {
@@ -436,7 +435,24 @@
    "id": "77eaead0",
    "metadata": {},
    "source": [
-    "When forecasting, add an error bands to show confidence level for future forecast"
+    "When forecasting, add an error bands to show confidence level for future forecast by adding residual variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a31219c",
+   "metadata": {},
+   "source": [
+    "The Integration of Lasso and HHT in TS Forecasting\n",
+    "\n",
+    "After HHT, we get\n",
+    "* A set of Hilbert transformed signals from IMFs\n",
+    "* Instantaneous frequency\n",
+    "* Instantaneous amplitude\n",
+    "\n",
+    "which introduces sparsity, which means not all components carry useful predictive information but rather just noise-dominated and redundant\n",
+    "\n",
+    "Lasso (L1 penalty) enforces sparsity by shrinking many coefficients exactly to 0 => perfect for HHT, as don't want all IMFs, just relevant ones. so Lasso will filters out noise features "
    ]
   },
   {
