--- a/notebooks/track3_regression_benchmark.ipynb
+++ b/notebooks/track3_regression_benchmark.ipynb
@@ -2,10 +2,107 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0bf0ee9d",
+   "metadata": {},
+   "source": [
+    "# <a id='toc1_'></a>[Time Series Regression Benchmark](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72995912",
+   "metadata": {},
+   "source": [
+    "**Table of contents**<a id='toc0_'></a>    \n",
+    "- [Time Series Regression Benchmark](#toc1_)    \n",
+    "  - [Special Preprocessing](#toc1_1_)    \n",
+    "    - [Mini(ROCKET)](#toc1_1_1_)    \n",
+    "      - [Pre-requisites: The Convolution integration Recurrent Network](#toc1_1_1_1_)    \n",
+    "  - [Deep Learning approach](#toc1_2_)    \n",
+    "      - [RNN/ LSTM/ GRU/ Bi-Directional](#toc1_2_1_1_)    \n",
+    "    - [RVFL (DE)](#toc1_2_2_)    \n",
+    "    - [ResNet](#toc1_2_3_)    \n",
+    "    - [FCN](#toc1_2_4_)    \n",
+    "  - [Ensembles Approach](#toc1_3_)    \n",
+    "      - [Proximity Forest](#toc1_3_1_1_)    \n",
+    "      - [Time Series Forest](#toc1_3_1_2_)    \n",
+    "      - [HIVE-COTE](#toc1_3_1_3_)    \n",
+    "    - [TDE](#toc1_3_2_)    \n",
+    "    - [CIF (Canonical Interval Forest)](#toc1_3_3_)    \n",
+    "    - [CAWPE (Cross-Validation Accuracy Weighted Probabilistic Ensemble)](#toc1_3_4_)    \n",
+    "    - [TS-CHIEF](#toc1_3_5_)    \n",
+    "\n",
+    "<!-- vscode-jupyter-toc-config\n",
+    "\tnumbering=false\n",
+    "\tanchor=true\n",
+    "\tflat=false\n",
+    "\tminLevel=1\n",
+    "\tmaxLevel=6\n",
+    "\t/vscode-jupyter-toc-config -->\n",
+    "<!-- THIS CELL WILL BE REPLACED ON TOC UPDATE. DO NOT WRITE YOUR TEXT IN THIS CELL -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ffdc34f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "#setup system path for modular import\n",
+    "import sys, os\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if project_root not in sys.path:\n",
+    "    sys.path.append(project_root)\n",
+    "\n",
+    "#Processing and tests\n",
+    "from scipy import stats\n",
+    "from sklearn.preprocessing import PowerTransformer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "#Fetching stock data with the given name\n",
+    "import yfinance as yf\n",
+    "\n",
+    "#for technical analysis\n",
+    "import ta\n",
+    "import mplfinance as mpf\n",
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "#Time series decomposition and forecasting prep\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "from statsmodels.tsa.stattools import adfuller, acf, pacf, kpss\n",
+    "\n",
+    "#Forecasting models\n",
+    "from statsmodels.tsa.holtwinters import SimpleExpSmoothing, Holt, ExponentialSmoothing # Holt-Winter\n",
+    "\n",
+    "#Evaluation\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e55517f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.utils.processing.denoising import Dimensional_Denoise\n",
+    "from src.utils.processing.extract_stock_index import extract_index\n",
+    "from src.utils.processing.feature_extraction import Feature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0f9f68e1",
    "metadata": {},
    "source": [
-    "## Special Preprocessing"
+    "## <a id='toc1_1_'></a>[Special Preprocessing](#toc0_)"
    ]
   },
   {
@@ -13,7 +110,7 @@
    "id": "3bf5c359",
    "metadata": {},
    "source": [
-    "### Mini(ROCKET)"
+    "### <a id='toc1_1_1_'></a>[Mini(ROCKET)](#toc0_)"
    ]
   },
   {
@@ -21,7 +118,7 @@
    "id": "bc818ef9",
    "metadata": {},
    "source": [
-    "#### Pre-requisites: The Convolution integration Recurrent Network"
+    "#### <a id='toc1_1_1_1_'></a>[Pre-requisites: The Convolution integration Recurrent Network](#toc0_)"
    ]
   },
   {
@@ -35,7 +132,7 @@
    "id": "8d54f6d9",
    "metadata": {},
    "source": [
-    "## Deep Learning approach"
+    "## <a id='toc1_2_'></a>[Deep Learning approach](#toc0_)"
    ]
   },
   {
@@ -43,7 +140,7 @@
    "id": "8485b1b3",
    "metadata": {},
    "source": [
-    "#### RNN/ LSTM/ GRU/ Bi-Directional"
+    "#### <a id='toc1_2_1_1_'></a>[RNN/ LSTM/ GRU/ Bi-Directional](#toc0_)"
    ]
   },
   {
@@ -51,7 +148,7 @@
    "id": "55df31f0",
    "metadata": {},
    "source": [
-    "### RVFL (DE)"
+    "### <a id='toc1_2_2_'></a>[RVFL (DE)](#toc0_)"
    ]
   },
   {
@@ -59,7 +156,7 @@
    "id": "9d6a423a",
    "metadata": {},
    "source": [
-    "### ResNet"
+    "### <a id='toc1_2_3_'></a>[ResNet](#toc0_)"
    ]
   },
   {
@@ -67,7 +164,7 @@
    "id": "ba3c4892",
    "metadata": {},
    "source": [
-    "### FCN"
+    "### <a id='toc1_2_4_'></a>[FCN](#toc0_)"
    ]
   },
   {
@@ -75,7 +172,7 @@
    "id": "0f481d1b",
    "metadata": {},
    "source": [
-    "## Ensembles Approach"
+    "## <a id='toc1_3_'></a>[Ensembles Approach](#toc0_)"
    ]
   },
   {
@@ -83,7 +180,7 @@
    "id": "201ddd9d",
    "metadata": {},
    "source": [
-    "#### Proximity Forest"
+    "#### <a id='toc1_3_1_1_'></a>[Proximity Forest](#toc0_)"
    ]
   },
   {
@@ -91,7 +188,7 @@
    "id": "f1971d09",
    "metadata": {},
    "source": [
-    "#### Time Series Forest"
+    "#### <a id='toc1_3_1_2_'></a>[Time Series Forest](#toc0_)"
    ]
   },
   {
@@ -107,7 +204,7 @@
    "id": "015d4769",
    "metadata": {},
    "source": [
-    "#### HIVE-COTE"
+    "#### <a id='toc1_3_1_3_'></a>[HIVE-COTE](#toc0_)"
    ]
   },
   {
@@ -115,7 +212,7 @@
    "id": "f17c7034",
    "metadata": {},
    "source": [
-    "### TDE"
+    "### <a id='toc1_3_2_'></a>[TDE](#toc0_)"
    ]
   },
   {
@@ -123,7 +220,7 @@
    "id": "b1f2d122",
    "metadata": {},
    "source": [
-    "### CIF (Canonical Interval Forest)"
+    "### <a id='toc1_3_3_'></a>[CIF (Canonical Interval Forest)](#toc0_)"
    ]
   },
   {
@@ -131,7 +228,7 @@
    "id": "03515354",
    "metadata": {},
    "source": [
-    "### CAWPE (Cross-Validation Accuracy Weighted Probabilistic Ensemble)"
+    "### <a id='toc1_3_4_'></a>[CAWPE (Cross-Validation Accuracy Weighted Probabilistic Ensemble)](#toc0_)"
    ]
   },
   {
@@ -139,7 +236,7 @@
    "id": "357641be",
    "metadata": {},
    "source": [
-    "### TS-CHIEF"
+    "### <a id='toc1_3_5_'></a>[TS-CHIEF](#toc0_)"
    ]
   },
   {
